# MetadataView

./: CMakeLists.txt  conanfile.py
.github/workflows/: build.yml
res/: metadata_resources.qrc  resources.qrc
res/filterview/: checkBoxSelect.css  checkBoxSelect.js  dualRangeSlider.js  filterview.css  filterview.html  filterview.tools.js
res/js_libs/: qwebchannel.tools.js
src/: FilterView.cpp  FilterView.h  MetadataSortFilterProxyModel.cpp  MetadataSortFilterProxyModel.h  MetadataView.cpp  MetadataView.h  MetadataView.json  TableModel.cpp  TableModel.h
